--- a/wp-content/themes/decimaltenths/src/scss/global/_extends.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_extends.scss
@@ -177,7 +177,7 @@
     display: inline-block;
 	padding: 10px 50px;
 	height: 50px;
-	color: var(--brand-neon-green);
+	color: black;
 	font-family: $heading-font;
 	letter-spacing: 0.05em;
 	text-transform: uppercase;
@@ -185,11 +185,11 @@
 	border: 2px solid var(--brand-neon-green);
 	border-radius: 50px;
 	cursor: pointer;
+    background-color: var(--brand-neon-green);
 
 	&:hover,
 	&:focus {
-		color: black;
-		background-color: var(--brand-neon-green);
+		color: white;
 	}
 }
 
