Styling for checkout, order received and my account pages

--- a/wp-content/themes/decimaltenths/src/scss/checkout.scss
+++ b/wp-content/themes/decimaltenths/src/scss/checkout.scss
@@ -12,6 +12,7 @@
 @import "global/extends";
 
 @import "components/alerts";
+@import "components/tables";
 // @import "components/cross-sells";
 // @import "components/quantity";
 // @import "components/order-received";
