--- a/wp-content/themes/decimaltenths/src/scss/modules/_single-product-layout.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_single-product-layout.scss
@@ -105,7 +105,7 @@
 			}
 
 			.summary {
-				background-color: white;
+				background-color: var(--off-white);
 				border: 2px solid var(--brand-neon-green);
 				color: black;
 				border-radius: 5px;
