--- a/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-styles.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-styles.scss
@@ -104,7 +104,7 @@
                 height: rem-calc(50);
                 color: black;
                 line-height: rem-calc(50);
-                background-color: white;
+                background-color: var(--off-white);
 
                 &:hover,
                 &:focus {
