--- a/wp-content/themes/decimaltenths/src/scss/components/_search-by-car-form.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_search-by-car-form.scss
@@ -13,7 +13,7 @@
 
     select {
         width: 100%;
-        background-color: white;
+        background-color: var(--off-white);
         border: 0;
 
         @include breakpoint(xlarge) {
