--- a/wp-content/themes/decimaltenths/src/scss/components/_search.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_search.scss
@@ -14,7 +14,7 @@
         background-color: var(--brand-neon-green);
 
         &:hover {
-            color: white;
+            color: var(--off-white);
         }
     }
 }
