--- a/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
@@ -134,6 +134,11 @@
 			.menu-item {
 				flex: 0 0 25%;
 				padding-top: $medium-spacing;
+				margin: 5px;
+
+				&:nth-child(even) {
+					background-color: var(--brand-l-grey);
+				}
 			}
 		}
 
