Added youtube channel link and tidied more styling for navigation and home carousel

--- a/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
@@ -100,6 +100,10 @@
 				max-height: 100vh;
 				overflow: scroll;
 				z-index: 9;
+
+				@include breakpoint(medium down) {
+					flex-flow: column;
+				}
 			}
 		}
 	}
@@ -135,6 +139,11 @@
 				flex: 0 0 25%;
 				padding-top: $medium-spacing;
 				margin: 5px;
+
+				@include breakpoint(medium down) {
+					flex: 0 0 100%;
+					margin: 0;
+				}
 
 				&:nth-child(even) {
 					background-color: var(--brand-l-grey);
