Filter styling on shop page

--- a/wp-content/themes/decimaltenths/src/scss/modules/_header.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_header.scss
@@ -18,6 +18,7 @@
 
 .header {
 	border-bottom: 2px solid var(--brand-neon-green);
+	background-color: black;
 
 	@include breakpoint(medium down) {
 		background-color: black;
