--- a/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-styles.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-styles.scss
@@ -56,8 +56,7 @@
 }
 
 .shop-sidebar {
-    padding: $large-spacing;
-    background-color: var(--brand-d-grey);
+    // padding: $large-spacing;
 
     @include breakpoint(large) {
         margin-right: 25px;
