--- a/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-styles.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-styles.scss
@@ -80,9 +80,8 @@
 }
 
 .woocommerce-pagination {
-    margin-bottom: rem-calc(50);
+    // margin-bottom: rem-calc(50);
     padding: rem-calc(50px 15px);
-    background-color: var(--brand-d-grey);
 
     // UL
     ul.page-numbers {
