--- a/wp-content/themes/decimaltenths/src/scss/components/_woo-gallery.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_woo-gallery.scss
@@ -89,15 +89,18 @@
 .flex-control-thumbs {
     overflow: hidden;
     zoom:1;
-    margin: rem-calc(30) 0 0;
+    margin: $small-spacing 0 0 0;
     padding: 0;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
 }
 
 .flex-control-thumbs li {
     float: left;
     margin: 0;
-    padding: 10px;
-    width: 25%;
+    flex: 0 0 24%;
+    max-width: 24%;
     list-style: none;
 }
 
@@ -105,6 +108,7 @@
     cursor: pointer;
     opacity: .5;
     margin: 0;
+    width: 100%;
 }
 
 .flex-control-thumbs li img.flex-active,
