--- a/wp-content/themes/decimaltenths/src/scss/modules/_woo-cart.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_woo-cart.scss
@@ -123,7 +123,8 @@ table:not(.variations) {
 
 		[name="update_cart"] {
 			display: inline-block;
-			vertical-align: top;			
+			vertical-align: top;
+			color: var(--off-black);			
 
 			@include breakpoint(medium down) {
 				width: 100%;
@@ -150,20 +151,21 @@ table:not(.variations) {
 	}
 	.checkout-button {
 		display: inline-block;
-		padding: 10px 35px;
+		padding: 10px 50px;
 		height: 50px;
-		color: black;
 		font-family: $heading-font;
 		letter-spacing: 0.05em;
 		text-transform: uppercase;
 		background-color: transparent;
 		border: 2px solid var(--brand-neon-green);
+		border-radius: 50px;
 		cursor: pointer;
-		background-color: var(--brand-neon-green);
+		color: var(--brand-neon-green);
 
 		&:hover,
 		&:focus {
-			color: var(--off-white);
+			color: var(--off-black);
+			background: var(--brand-neon-green);
 		}
 	}
 }
