Line height adjustment for text

--- a/wp-content/themes/decimaltenths/src/scss/components/_woo-tabs.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_woo-tabs.scss
@@ -58,7 +58,7 @@
 
         p {
             margin-bottom: $small-spacing;
-			line-height: $small-spacing;
+			line-height: $large-spacing;
         }
     }
 }
