--- a/wp-content/themes/decimaltenths/src/scss/modules/_single-product-layout.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_single-product-layout.scss
@@ -134,7 +134,7 @@
 			.woocommerce-product-details__short-description {
 				p {
 					margin-bottom: $small-spacing;
-					line-height: $small-spacing;
+					line-height: $large-spacing;
 				}
 			}
 
