Tidying styling for navigation and category products

--- a/wp-content/themes/decimaltenths/src/scss/components/_woo-grid.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_woo-grid.scss
@@ -159,6 +159,7 @@ ul.products,
 			position: relative;
 			overflow: hidden;
 			height: 30vh;
+			margin-bottom: $medium-spacing;
 
 			&::before {
 				content: '';
