--- a/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
@@ -56,11 +56,11 @@
 		}
 
 		@include breakpoint(large) {
-			font-size: rem-calc(15px);
+			font-size: rem-calc(12px);
 		}
 
 		@include breakpoint(xxlarge) {
-			font-size: rem-calc(16px);
+			font-size: rem-calc(14px);
 		}
 
 		> a {
@@ -95,7 +95,7 @@
 			+ .sub-menu {
 				display: flex;
 				flex-flow: row wrap;
-				justify-content: space-between;
+				justify-content: space-around;
 				width: 100%;
 				max-height: 100vh;
 				overflow: scroll;
@@ -158,11 +158,11 @@
 			cursor: pointer;
 
 			@include breakpoint(large) {
-				font-size: rem-calc(15px);
+				font-size: rem-calc(12px);
 			}
 
 			@include breakpoint(xxlarge) {
-				font-size: rem-calc(16px);
+				font-size: rem-calc(14px);
 			}
 
 			a {
