--- a/wp-content/themes/decimaltenths/src/scss/global/_fonts.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_fonts.scss
@@ -6,8 +6,8 @@ font-family: 'Source Code Pro';
 font-style: normal;
 font-weight: 200;
 src: local(''),
-		url('/wp-content/themes/decimaltenths/dist/fonts/source-code-pro-v22-latin-200.woff2') format('woff2'),
-		url('/wp-content/themes/decimaltenths/dist/fonts/source-code-pro-v22-latin-200.woff') format('woff');
+		url('./fonts/source-code-pro-v22-latin-200.woff2') format('woff2'),
+		url('./fonts/source-code-pro-v22-latin-200.woff') format('woff');
 }
 /* source-code-pro-regular - latin */
 @font-face {
@@ -15,8 +15,8 @@ font-family: 'Source Code Pro';
 font-style: normal;
 font-weight: 400;
 src: local(''),
-		url('/wp-content/themes/decimaltenths/dist/fonts/source-code-pro-v22-latin-regular.woff2') format('woff2'),
-		url('/wp-content/themes/decimaltenths/dist/fonts/source-code-pro-v22-latin-regular.woff') format('woff');
+		url('../fonts/source-code-pro-v22-latin-regular.woff2') format('woff2'),
+		url('../fonts/source-code-pro-v22-latin-regular.woff') format('woff');
 }
 /* source-code-pro-500 - latin */
 @font-face {
@@ -24,8 +24,8 @@ font-family: 'Source Code Pro';
 font-style: normal;
 font-weight: 500;
 src: local(''),
-		url('/wp-content/themes/decimaltenths/dist/fonts/source-code-pro-v22-latin-500.woff2') format('woff2'),
-		url('/wp-content/themes/decimaltenths/dist/fonts/source-code-pro-v22-latin-500.woff') format('woff');
+		url('../fonts/source-code-pro-v22-latin-500.woff2') format('woff2'),
+		url('../fonts/source-code-pro-v22-latin-500.woff') format('woff');
 }
 
 /* michroma-regular - latin */
@@ -34,6 +34,6 @@ src: local(''),
 	font-style: normal;
 	font-weight: 400;
 	src: local(''),
-		 url('/wp-content/themes/decimaltenths/dist/fonts/michroma-v16-latin-regular.woff2') format('woff2'),
-		 url('/wp-content/themes/decimaltenths/dist/fonts/michroma-v16-latin-regular.woff') format('woff');
+		 url('../fonts/michroma-v16-latin-regular.woff2') format('woff2'),
+		 url('../fonts/michroma-v16-latin-regular.woff') format('woff');
 }
