Background colour of pagination changed to green

--- a/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-styles.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-styles.scss
@@ -102,7 +102,7 @@
                 height: rem-calc(50);
                 color: black;
                 line-height: rem-calc(50);
-                background-color: var(--off-white);
+                background-color: var(--brand-neon-green);
 
                 &.dots {
                     color: var(--off-white);
