--- a/wp-content/themes/decimaltenths/src/scss/components/_woo-grid.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_woo-grid.scss
@@ -71,11 +71,18 @@ ul.products,
 	&.columns-3 {
 
 		> .product {
+			padding-left: 0.325rem;
+			padding-right: 0.325rem;
 
 			@include breakpoint(large) {
 				// large-4
 				flex: 0 0 33.33333%;
 				max-width: 33.33333%;
+			}
+
+			@include breakpoint(medium down) {
+				padding-left: $medium-spacing;
+				padding-right: $medium-spacing;
 			}
 		}
 	}
@@ -84,10 +91,18 @@ ul.products,
 
 		> .product {
 
+			padding-left: 0.325rem;
+			padding-right: 0.325rem;
+
 			@include breakpoint(large) {
 				// xlarge-3
 				flex: 0 0 25%;
 				max-width: 25%;
+			}
+
+			@include breakpoint(medium down) {
+				padding-left: $medium-spacing;
+				padding-right: $medium-spacing;
 			}
 		}
 	}
@@ -213,7 +228,7 @@ ul.products,
 .price {
 	display: block;
 	font-weight: bold;
-	color: var(--brand-neon-green);
+	font-size: var(--size-l-1) !important;
 
 	del {
 		opacity: 0.5;
