--- a/wp-content/themes/decimaltenths/src/scss/modules/_single-product-layout.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_single-product-layout.scss
@@ -59,9 +59,32 @@
 			grid-area: upsells;
 		}
 
-		.woocommerce-loop-product__title {
-			text-transform: none;
-			font-size: var(--size-l-1);
+		.product-info {
+			display: grid;
+			grid-template-columns: 60% 40%;
+			grid-template-rows: repeat(1, 1fr);
+			grid-column-gap: 0px;
+			grid-row-gap: 0px;
+
+			.woocommerce-loop-product__title {
+				grid-area: 1 / 1 / 2 / 2;
+				text-align: left;
+				font-size: 0.85rem !important;
+                text-transform: capitalize;
+                line-height: 1.375;
+			}
+
+			.price {
+				grid-area: 1 / 2 / 2 / 3;
+				text-align: right;
+			}
+
+			.product--category {
+				grid-area: 2/1/3/3;
+				color: var(--brand-neon-green);
+				margin-bottom: 0;
+				text-align: left;
+			}
 		}
 	}
 
