--- a/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-layout.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-layout.scss
@@ -183,9 +183,35 @@
 	}
 }
 
+
 ul.products {
 	@include breakpoint(medium) {
 		grid-area: tax-content;
+	}
+
+	.product-info {
+		display: grid;
+		grid-template-columns: 60% 40%;
+		grid-template-rows: repeat(1, 1fr);
+		grid-column-gap: 0px;
+		grid-row-gap: 0px;
+
+		.woocommerce-loop-product__title {
+			grid-area: 1 / 1 / 2 / 2;
+			text-align: left;
+		}
+
+		.price {
+			grid-area: 1 / 2 / 2 / 3;
+			text-align: right;
+		}
+
+		.product--category {
+			grid-area: 2/1/3/3;
+			color: var(--brand-neon-green);
+			margin-bottom: 0;
+			text-align: left;
+		}
 	}
 }
 
