Tab text alignment

--- a/wp-content/themes/decimaltenths/src/scss/components/_woo-tabs.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_woo-tabs.scss
@@ -81,8 +81,8 @@
         }
 
         &.entry-content > *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.wp-block-separator):not(.woocommerce) {
-            max-width: unset;
-            
+            max-width: var(--grid-width);
+            margin: 0 auto;
         }
 
         p {
