--- a/wp-content/themes/decimaltenths/src/scss/modules/_single-product-layout.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_single-product-layout.scss
@@ -122,7 +122,42 @@
 			}
 		}
 
-		.cart {
+		.variations_form {
+			margin-bottom: $xxlarge-spacing;
+
+			.variations {
+				display: flex;
+				th {
+					&.label {
+						display: none;
+					}
+				}
+			}
+
+			.single_variation_wrap {
+
+				.woocommerce-variation-add-to-cart {
+
+					display: flex;
+					justify-content: space-between;
+
+					@include breakpoint(medium down) {
+						display: block;
+					}
+
+					.quantity {
+						flex: 0 0 50%;
+						max-width: 50%;
+
+						@include breakpoint(medium down) {
+							max-width: 100%;
+						}
+					}
+				}
+			}
+		}
+
+		.cart:not(.variations_form) {
 			margin-bottom: $xxlarge-spacing;
 			display: flex;
 			justify-content: space-between;
