Added width 100% on product gallery image

--- a/wp-content/themes/decimaltenths/src/scss/components/_woo-gallery.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_woo-gallery.scss
@@ -36,6 +36,12 @@
     }
 }
 
+.woocommerce-product-gallery__image {
+    img {
+        width: 100%;
+    }
+}
+
 .woocommerce-product-gallery__image:nth-child(n+2) {
     width: 25%;
     display: inline-block;
