Star rating margin top added

--- a/wp-content/themes/decimaltenths/src/scss/components/_woo-grid.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_woo-grid.scss
@@ -122,6 +122,10 @@ ul.products,
 			@extend %h5;
 		}
 
+		.star-rating {
+			margin-top: 15px;
+		}
+
 		// on sale badge
 		.onsale {
 			position: absolute;
