Review labels colour white

--- a/wp-content/themes/decimaltenths/src/scss/components/_woo-tabs.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_woo-tabs.scss
@@ -76,6 +76,12 @@
         position: relative;
         z-index: 1;
 
+        .woocommerce-Reviews {
+            label {
+                color: white;
+            }
+        }
+
         @include breakpoint(small down) {
             border: none;
         }
