--- a/wp-content/plugins/formidable/css/frm_admin.css
+++ b/wp-content/plugins/formidable/css/frm_admin.css
@@ -227,8 +227,7 @@ td.column-title .frm_actions_dropdown {
 	text-align: center;
 }
 
-.post-type-frm_display:not(.edit-php) #frm_top_bar,
-.frm-full-screen.post-type-frm_display #frm_top_bar,
+.post-type-frm_display #frm_top_bar.frm_nav_bar,
 .frm_page_container #frm_top_bar {
 	border-bottom: 1px solid var(--grey-border);
 	padding: 0 20px;
@@ -286,14 +285,12 @@ a .frmsvg,
 	max-width: 100%;
 }
 
-.frm-header-logo,
-.edit-php.post-type-frm_display .frm-header-logo {
+.frm-header-logo {
 	float: left;
 	margin: 0 15px 0 0;
 }
 
-.frm-full-screen.post-type-frm_display .frm-header-logo,
-.post-type-frm_display .frm-header-logo,
+.post-type-frm_display .frm_nav_bar .frm-header-logo,
 .frm_page_container .frm-header-logo {
 	margin: 13px 0 0;
 }
@@ -400,7 +397,7 @@ ul.frm_form_nav > li:last-of-type {
 	color: var(--grey);
 }
 
-.edit-php.post-type-frm_display #frm_top_bar h1,
+.post-type-frm_display #frm_top_bar h1,
 .frm_wrap #frm_top_bar h1 {
 	font-size: 22px;
 	font-weight: 400;
@@ -411,8 +408,7 @@ ul.frm_form_nav > li:last-of-type {
 	line-height: 1.4;
 }
 
-.frm-full-screen.post-type-frm_display #frm_top_bar h1,
-.post-type-frm_display #frm_top_bar h1,
+.post-type-frm_display #frm_top_bar.frm_nav_bar h1,
 .frm_page_container #frm_top_bar h1 {
 	margin: 0 15px;
 	padding: 20px 0 0;
@@ -421,8 +417,7 @@ ul.frm_form_nav > li:last-of-type {
 	line-height: 1.16;
 }
 
-.frm-full-screen.post-type-frm_display #frm_top_bar h1 span,
-.post-type-frm_display #frm_top_bar h1 span,
+.post-type-frm_display #frm_top_bar.frm_nav_bar h1 span,
 .frm_page_container #frm_top_bar h1 span {
 	font-size: 19px;
 	max-width: 175px;
@@ -3350,13 +3345,13 @@ input[type="checkbox"] {
 	margin-right: 5px;
 }
 
-.with_frm_style .frm_radio input[type=radio] {
+.frm_single_entry_page .with_frm_style .frm_radio input[type=radio] {
 	margin: 5px 0;
 	width: 18px;
 	position: relative; /* override Bootstrap */
 }
 
-.with_frm_style .frm_radio input[type=radio]:before {
+.frm_single_entry_page .with_frm_style .frm_radio input[type=radio]:before {
 	position: relative !important;
 	left: calc(50% - 6px);
 	top: calc(50% - 6px);
@@ -3388,10 +3383,6 @@ input[type="checkbox"] {
 .frm_field_box .divider_section_only:hover > .frm_inner_field_container > label,
 li.ui-state-default.selected > .frm_inner_field_container > label {
 	max-width: calc(100% - 100px);
-}
-
-.frm-dragging * {
-	cursor: grabbing !important;
 }
 
 .frm-drag-fade {
@@ -7432,6 +7423,7 @@ iframe#dyncontent_ifr {
 
 	/* Custom rules */
 	z-index: 9999999;
+	pointer-events: none;
 }
 
 .tooltip.show {
@@ -8101,7 +8093,7 @@ Responsive Design
 		margin: 5px 0;
 	}
 
-	.post-type-frm_display #frm_top_bar h1,
+	.post-type-frm_display #frm_top_bar.frm-nav-bar h1,
 	.frm_page_container #frm_top_bar h1 {
 		width: auto;
 		max-width: 200px;
@@ -8245,11 +8237,14 @@ Responsive Design
 		width: 100%;
 	}
 
-	.with_frm_style .frm_radio input[type=radio] {
-		width: 18px !important;
-	}
+	.with_frm_style .frm_radio input[type=radio],
 	.with_frm_style .frm_checkbox input[type=checkbox] {
 		width: 25px !important;
+	}
+
+	.frm_single_entry_page .with_frm_style .frm_radio input[type=radio],
+	.frm_single_entry_page .with_frm_style .frm_checkbox input[type=checkbox] {
+		width: 18px !important;
 	}
 
 	.wp-list-table.toplevel_page_formidable .column-entries,
@@ -8521,7 +8516,8 @@ Responsive Design
 	}
 }
 
-.frm-admin-page-styles #frm-publishing #save_menu_header {
+.frm-admin-page-styles #frm-publishing #save_menu_header,
+.frm-admin-page-styles2 #frm-publishing #save_menu_header {
 	display: inline-block;
 }
 
