--- a/wp-content/themes/decimaltenths/src/scss/modules/_header.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_header.scss
@@ -10,6 +10,7 @@
 .logo {
 	display: block;
 	margin-bottom: 0;
+	width: rem-calc(254px);
 
 	a {
 		display: block;
@@ -25,9 +26,13 @@
 		height: calc(15px + 50px + 15px);
 	}
 
-	@include breakpoint(xxlarge) {
-		padding: rem-calc(29px 49px 42px);
+	@include breakpoint(large) {
+		padding: $medium-spacing 0;
 	}
+
+	// @include breakpoint(xxlarge) {
+	// 	padding: rem-calc(29px 49px 42px);
+	// }
 
 	// groups everything to appear in mobile menu
 	.header--inner {
@@ -46,7 +51,6 @@
 		}
 
 		.logo {
-			width: rem-calc(153px);
 	
 			@include breakpoint(medium down) {
 				position: absolute;
@@ -85,8 +89,8 @@
 		.menu-item {
 			display: inline-block;
 			margin-bottom: 0;
-			width: 50px;
-			height: 50px;
+			width: rem-calc(50px);
+			height: rem-calc(50px);
 			color: white;
 			font-size: rem-calc(14px);
 			text-transform: uppercase;
@@ -94,7 +98,7 @@
 
 			a {
 				display: block;
-				padding-top: 12px;
+				padding-top: rem-calc(12px);
 				text-align: center;
 
 				.basket-quantity {
@@ -109,7 +113,7 @@
 			.svg {
 				display: inline-block;
 				vertical-align: middle;
-				width: 16px;
+				width: rem-calc(20px);
 				fill: var(--brand-neon-green);
 			}
 		}
