--- a/wp-content/themes/decimaltenths/src/scss/components/_brand-logos.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_brand-logos.scss
@@ -3,17 +3,20 @@
 // ==============================================
 
 brand-logos {
-    @extend %row;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    display: block;
+    padding-top: rem-calc(40);
+    padding-bottom: rem-calc(40);
+
+    background: var(--off-black) url('../img/body-bg-1.png') center no-repeat;
+	background-size: 100% auto;
 
     .column {
         display: flex;
         flex-flow: row wrap;
         justify-content: center;
         align-items: center;
-        padding-top: 20px;
-        padding-bottom: 20px;
+        // padding-top: rem-calc(20);
+        // padding-bottom: rem-calc(20);
 
         flex: 0 0 50%;
         max-width: 50%;
@@ -24,14 +27,14 @@ brand-logos {
         }
 
         @include breakpoint(large) {
-            flex: 1 1 0px;
+            flex: 1 1 0;
             max-width: unset;
         }
     }
 
     .b-logo {
-        width: 120px;
-        max-height: 120px;
-        opacity: 0.5;
+        width: rem-calc(120);
+        max-height: rem-calc(120);
+        opacity: 0.7;
     }
 }
