Changed the body font

--- a/wp-content/themes/decimaltenths/src/scss/global/_variables.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_variables.scss
@@ -5,7 +5,8 @@
 $global-width: 1550px;
 
 // Font family
-$brand-font: "Source Code Pro";
+// $brand-font: "Source Code Pro";
+$brand-font: "Noto Sans";
 $heading-font: "Michroma";
 
 // Colors
