--- a/wp-content/themes/decimaltenths/src/scss/components/_hero-car-filters.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_hero-car-filters.scss
@@ -6,7 +6,7 @@ hero-car-filters {
     position: relative;
     display: flex;
     height: 100%;
-    max-height: 600px;
+    height: 600px;
 
     @include breakpoint(medium down) {
         height: 95vh;
@@ -57,19 +57,19 @@ hero-car-filters {
 
     .hero--heading {
         margin-bottom: $small-spacing;
-        font-size: calc(69px * #{$medium-calc});
+        font-size: calc(59px * #{$medium-calc});
         line-height: 1.24;
         letter-spacing: 0.05em;
 
         @include breakpoint(large) {
-            font-size: rem-calc(69);
+            font-size: rem-calc(59);
         }
     }
 
     .hero--subheading {
         font-size: rem-calc(18);
         line-height: rem-calc(34);
-        font-style: italic;
+        // font-style: italic;
     }
 }
 
