--- a/wp-content/themes/decimaltenths/src/scss/global/_root-vars.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_root-vars.scss
@@ -8,7 +8,8 @@
 
 	// Brand Colours
 	--brand-neon-green: #50e887;
-	// --brand-green: #43B143;
+	--brand-green: #43B143;
+	--brand-dark-green: #3e7a3e;
 	--brand-l-grey: #F2F2F2;
 	--brand-d-grey: #282828;
 
