--- a/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-layout.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_taxonomy-layout.scss
@@ -208,7 +208,7 @@ ul.products {
 
 		.product--category {
 			grid-area: 2/1/3/3;
-			color: var(--brand-neon-green);
+			color: var(--brand-green);
 			margin-bottom: 0;
 			text-align: left;
 		}
