--- a/wp-content/themes/decimaltenths/src/scss/components/_woo-grid.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_woo-grid.scss
@@ -173,7 +173,10 @@ ul.products,
 		.picture {
 			position: relative;
 			overflow: hidden;
-			height: 30vh;
+			// height: 30vh;
+			height: 0; 
+            padding-top: 100%;
+			
 			margin-bottom: $medium-spacing;
 
 			&::before {
