--- a/wp-content/themes/decimaltenths/src/scss/modules/_header.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_header.scss
@@ -56,6 +56,7 @@
 				position: absolute;
 				top: 15px;
 				left: calc(100vw + 15px);
+				width: rem-calc(190);
 			}
 
 			@include breakpoint(large) {
