--- a/wp-content/themes/decimaltenths/src/scss/modules/_single-product-layout.scss
+++ b/wp-content/themes/decimaltenths/src/scss/modules/_single-product-layout.scss
@@ -81,7 +81,7 @@
 
 			.product--category {
 				grid-area: 2/1/3/3;
-				color: var(--brand-neon-green);
+				color: var(--brand-green);
 				margin-bottom: 0;
 				text-align: left;
 			}
