--- a/wp-content/themes/decimaltenths/src/scss/components/_hero-car-filters.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_hero-car-filters.scss
@@ -6,9 +6,9 @@ hero-car-filters {
     position: relative;
     display: flex;
     height: 100%;
-    height: 600px;
+    height: rem-calc(600);
 
-    @include breakpoint(medium down) {
+    @include breakpoint(small only) {
         height: 95vh;
     }
 
