--- a/wp-content/themes/decimaltenths/src/scss/global/_extends.scss
+++ b/wp-content/themes/decimaltenths/src/scss/global/_extends.scss
@@ -50,7 +50,6 @@
 	margin-left: auto;
 	display: flex;
 	flex-flow: row wrap;
-	// outline: 1px dashed red;
 }
 
 %row {
@@ -59,7 +58,6 @@
 	margin-left: auto;
 	display: flex;
 	flex-flow: row wrap;
-	// outline: 1px dashed red;
 }
 
 // to use when inside breakpoint
@@ -68,7 +66,11 @@
 	padding-right: $medium-spacing;
 	padding-left: $medium-spacing;
 	min-width: 0;
-	// outline: 1px dashed cyan;
+
+	@include breakpoint(large) {
+		padding-right: $large-spacing;
+		padding-left: $large-spacing;
+	}
 }
 
 %column {
@@ -76,7 +78,11 @@
 	padding-right: $medium-spacing;
 	padding-left: $medium-spacing;
 	min-width: 0;
-	// outline: 1px dashed cyan;
+	
+	@include breakpoint(large) {
+		padding-right: $large-spacing;
+		padding-left: $large-spacing;
+	}
 }
 
 // Typography scale at 1.285
